chore: add eslint-config package

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@commitlint/config-conventional": "19.5.0",
     "@commitlint/prompt-cli": "19.5.0",
     "@inversifyjs/foundation-prettier-config": "workspace:*",
+    "@inversifyjs/foundation-eslint-config": "workspace:*",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "turbo": "2.1.3"
