docs(foundation-eslint-config): update author

--- a/packages/foundation/tools/eslint-config/package.json
+++ b/packages/foundation/tools/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Multiple authors",
+  "author": "Roberto Pintos López",
   "bugs": {
     "url": "https://github.com/inversify/monorepo/issues"
   },
