--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "eslint.workingDirectories": [
+    { "pattern": "./packages/container/libraries/*" },
     { "pattern": "./packages/foundation/tools/*" }
   ]
 }
