chore: add bug template

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint-staged": "15.2.10",
     "turbo": "2.1.3"
   },
-  "homepage": "http://inversify.io",
+  "homepage": "https://inversify.io",
   "keywords": [],
   "license": "MIT",
   "name": "root",
