--- a/packages/container/libraries/common/package.json
+++ b/packages/container/libraries/common/package.json
@@ -16,7 +16,7 @@
     "node": "^20.18.0",
     "pnpm": "^9.12.1"
   },
-  "homepage": "http://inversify.io",
+  "homepage": "https://inversify.io",
   "keywords": [
     "dependency injection",
     "dependency inversion",
