--- a/packages/container/libraries/common/package.json
+++ b/packages/container/libraries/common/package.json
@@ -6,10 +6,15 @@
   "description": "InversifyJs common utils",
   "devDependencies": {
     "@eslint/js": "9.12.0",
+    "@jest/globals": "29.7.0",
+    "@types/node": "20.16.11",
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "@typescript-eslint/parser": "8.8.1",
+    "jest": "29.7.0",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
     "typescript": "5.6.3"
   },
   "devEngines": {
@@ -46,7 +51,13 @@
     "build:clean": "rimraf lib",
     "format": "prettier --write ./src/**/*.ts",
     "lint": "eslint ./src",
-    "prebuild": "pnpm run build:clean"
+    "prebuild": "pnpm run build:clean",
+    "test": "jest --config=jest.config.mjs --runInBand",
+    "test:integration:js": "pnpm run test:js --selectProjects Integration",
+    "test:js": "jest --config=jest.js.config.mjs --runInBand",
+    "test:js:coverage": "pnpm run test:js --coverage",
+    "test:uncommitted": "pnpm run test --changedSince=HEAD",
+    "test:unit:js": "pnpm run test:js --selectProjects Unit"
   },
   "sideEffects": false,
   "version": "1.0.0"
