--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "format": "turbo run format",
     "lint": "turbo run lint",
     "prepare": "husky",
+    "prerelease": "pnpm run build",
+    "release": "changeset publish",
     "test:integration:js": "turbo test:integration:js",
     "test:js": "turbo run test:js",
     "test:js:coverage": "turbo run test:js:coverage",
