--- a/packages/foundation/tools/scripts/package.json
+++ b/packages/foundation/tools/scripts/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "homepage": "https://github.com/notaphplover/one-game#readme",
   "bin": {
+    "foundation-get-affected-projects": "./bin/getAffectedProjects.js",
     "foundation-get-affected-project-chunks": "./bin/getAffectedProjectsChunks.js",
     "foundation-ts-package-cjs": "./bin/writeCommonJsPackageJson.js",
     "foundation-ts-package-esm": "./bin/writeEsmPackageJson.js"
