fix: update collect coverage workflow to use main branch

--- a/.github/workflows/collect-coverage.yaml
+++ b/.github/workflows/collect-coverage.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           flags: ${{ matrix.package }}
-          override_branch: master
+          override_branch: main
           token: ${{ secrets.CODECOV_TOKEN }}
 
   test-coverage:
