fix: update foundation package with proper urls

--- a/packages/foundation/tools/scripts/package.json
+++ b/packages/foundation/tools/scripts/package.json
@@ -4,15 +4,15 @@
   "description": "Common scripts for monorepo packages",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/notaphplover/one-game.git"
+    "url": "git+https://github.com/inversify/monorepo.git"
   },
   "author": "Multiple authors",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/notaphplover/one-game/issues"
+    "url": "https://github.com/inversify/monorepo/issues"
   },
   "type": "module",
-  "homepage": "https://github.com/notaphplover/one-game#readme",
+  "homepage": "https://github.com/inversify/monorepo#readme",
   "bin": {
     "foundation-get-affected-projects": "./bin/getAffectedProjects.js",
     "foundation-get-affected-project-chunks": "./bin/getAffectedProjectsChunks.js",
