--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@inversifyjs/foundation-eslint-config": "workspace:*",
     "@inversifyjs/foundation-jest-config": "workspace:*",
     "@inversifyjs/foundation-scripts": "workspace:*",
+    "@inversifyjs/foundation-stryker-config": "workspace:*",
     "@inversifyjs/foundation-typescript-config": "workspace:*",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
