fix: update job with missing environment access

--- a/.github/workflows/collect-coverage.yaml
+++ b/.github/workflows/collect-coverage.yaml
@@ -26,6 +26,7 @@ jobs:
 
   test-coverage-package:
     name: Test with coverage
+    environment: CI
     needs: build
     runs-on: ubuntu-latest
     if: ${{ needs.build.outputs.affectedPackages != '[]' }}
