--- a/codecov.yml
+++ b/codecov.yml
@@ -5,8 +5,13 @@ coverage:
       '@inversifyjs/common':
         flags:
           - '@inversifyjs/common'
-
+      '@inversifyjs/reflect-metadata-utils':
+        flags:
+          - '@inversifyjs/reflect-metadata-utils'
 flags:
   '@inversifyjs/common':
     paths:
       - packages/container/libraries/common/
+  '@inversifyjs/reflect-metadata-utils':
+    paths:
+      - packages/foundation/libraries/reflect-metadata-utils
