--- a/.github/workflows/collect-coverage.yaml
+++ b/.github/workflows/collect-coverage.yaml
@@ -51,6 +51,7 @@ jobs:
         with:
           path: |
             ./packages/container/libraries/*
+            ./packages/foundation/libraries/*
             ./packages/foundation/tools/*
           key: ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
           restore-keys: |
