--- a/packages/container/libraries/common/tsconfig.json
+++ b/packages/container/libraries/common/tsconfig.json
@@ -1,9 +1,4 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
-  "extends": "@inversifyjs/foundation-typescript-config/tsconfig.base.cjs.json",
-  "compilerOptions": {
-    "outDir": "./lib",
-    "rootDir": "./src"
-  },
-  "include": ["src"]
+  "extends": "./tsconfig.esm.json"
 }
