--- a/packages/container/libraries/core/package.json
+++ b/packages/container/libraries/core/package.json
@@ -4,6 +4,10 @@
     "url": "https://github.com/inversify/monorepo/issues"
   },
   "description": "InversifyJs core package",
+  "dependencies": {
+    "@inversifyjs/common": "workspace:*",
+    "@inversifyjs/reflect-metadata-utils": "workspace:*"
+  },
   "devDependencies": {
     "@eslint/js": "9.13.0",
     "@jest/globals": "29.7.0",
