--- a/packages/container/libraries/core/package.json
+++ b/packages/container/libraries/core/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.17.3",
     "@typescript-eslint/eslint-plugin": "8.12.2",
     "@typescript-eslint/parser": "8.12.2",
+    "eslint": "9.13.0",
     "jest": "29.7.0",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
