--- a/packages/foundation/libraries/reflect-metadata-utils/package.json
+++ b/packages/foundation/libraries/reflect-metadata-utils/package.json
@@ -47,6 +47,10 @@
     "ts-node": "10.9.2",
     "typescript": "5.6.3"
   },
+  "devEngines": {
+    "node": "^20.18.0",
+    "pnpm": "^9.12.1"
+  },
   "homepage": "https://inversify.io",
   "peerDependencies": {
     "reflect-metadata": "0.2.2"
