--- a/packages/container/libraries/core/package.json
+++ b/packages/container/libraries/core/package.json
@@ -21,9 +21,12 @@
     "jest": "29.7.0",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
+    "ts-loader": "9.5.1",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "webpack": "5.96.1",
+    "webpack-cli": "5.1.4"
   },
   "homepage": "https://inversify.io",
   "keywords": [
@@ -60,7 +63,7 @@
   "scripts": {
     "build": "pnpm run build:cjs && pnpm run build:esm",
     "build:cjs": "tsc --build tsconfig.cjs.json && pnpm exec foundation-ts-package-cjs ./lib/cjs",
-    "build:esm": "tsc --build tsconfig.esm.json && pnpm exec foundation-ts-package-esm ./lib/esm",
+    "build:esm": "webpack && pnpm exec foundation-ts-package-esm ./lib/esm",
     "build:clean": "rimraf lib",
     "format": "prettier --write ./src/**/*.ts",
     "lint": "eslint ./src",
