--- a/packages/container/libraries/strongly-typed/package.json
+++ b/packages/container/libraries/strongly-typed/package.json
@@ -16,7 +16,9 @@
     "rimraf": "6.0.1",
     "ts-jest": "29.2.5",
     "ts-loader": "9.5.1",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "webpack": "5.96.1",
+    "webpack-cli": "5.1.4"
   },
   "devEngines": {
     "node": "^20.18.0",
