--- a/packages/container/libraries/strongly-typed/package.json
+++ b/packages/container/libraries/strongly-typed/package.json
@@ -46,7 +46,7 @@
   },
   "name": "@inversifyjs/strongly-typed",
   "peerDependencies": {
-    "inversify": ">=6.0.3"
+    "inversify": "^6.0.0"
   },
   "publishConfig": {
     "access": "public"
