--- a/packages/container/libraries/core/package.json
+++ b/packages/container/libraries/core/package.json
@@ -20,6 +20,7 @@
     "eslint": "9.15.0",
     "jest": "29.7.0",
     "prettier": "3.4.1",
+    "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "ts-loader": "9.5.1",
     "ts-jest": "29.2.5",
