chore(common): update build to bundle ESM types

--- a/packages/container/libraries/common/package.json
+++ b/packages/container/libraries/common/package.json
@@ -17,12 +17,12 @@
     "jest": "29.7.0",
     "prettier": "3.4.1",
     "rimraf": "6.0.1",
+    "rollup": "4.27.4",
     "ts-loader": "9.5.1",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.7.2",
-    "webpack": "5.96.1",
-    "webpack-cli": "5.1.4"
+    "tslib": "2.8.1",
+    "typescript": "5.7.2"
   },
   "devEngines": {
     "node": "^20.18.0",
@@ -59,7 +59,7 @@
   "scripts": {
     "build": "pnpm run build:cjs && pnpm run build:esm",
     "build:cjs": "tsc --build tsconfig.cjs.json && pnpm exec foundation-ts-package-cjs ./lib/cjs",
-    "build:esm": "webpack && pnpm exec foundation-ts-package-esm ./lib/esm",
+    "build:esm": "rollup -c ./rollup.config.mjs && pnpm exec foundation-ts-package-esm ./lib/esm",
     "build:clean": "rimraf lib",
     "format": "prettier --write ./src/**/*.ts",
     "lint": "eslint ./src",
