--- a/packages/container/libraries/strongly-typed/.npmignore
+++ b/packages/container/libraries/strongly-typed/.npmignore
@@ -1,8 +1,14 @@
+/.turbo
+/coverage
+/reports
+
 **/*.spec.js
 **/*.spec.js.map
 **/*.ts
-!lib/**/*.d.ts
-lib/**/*.spec.d.ts
+!lib/cjs/**/*.d.ts
+lib/esm/**/*.d.ts.map
+!lib/esm/index.d.ts
+!lib/esm/index.d.ts.map
 
 .lintstagedrc.json
 eslint.config.mjs
@@ -10,8 +16,10 @@ jest.config.mjs
 jest.config.stryker.mjs
 jest.js.config.mjs
 prettier.config.mjs
+rollup.config.mjs
 stryker.config.mjs
-tsconfig.json
 tsconfig.cjs.json
+tsconfig.cjs.tsbuildinfo
 tsconfig.esm.json
-tsconfig.tsbuildinfo
+tsconfig.esm.tsbuildinfo
+tsconfig.json
