--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "eslint.workingDirectories": [
     { "pattern": "./packages/container/libraries/*" },
+    { "pattern": "./packages/docs/services/*" },
     { "pattern": "./packages/foundation/libraries/*" },
     { "pattern": "./packages/foundation/tools/*" }
   ]
