--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 packages:
   - "packages/container/libraries/*"
+  - "packages/docs/services/*"
   - "packages/foundation/libraries/*"
   - "packages/foundation/tools/*"
