chore: add container package

--- a/codecov.yml
+++ b/codecov.yml
@@ -5,6 +5,9 @@ coverage:
       '@inversifyjs/common':
         flags:
           - '@inversifyjs/common'
+      '@inversifyjs/container':
+        flags:
+          - '@inversifyjs/container'
       '@inversifyjs/core':
         flags:
           - '@inversifyjs/core'
@@ -15,6 +18,9 @@ flags:
   '@inversifyjs/common':
     paths:
       - packages/container/libraries/common/
+  '@inversifyjs/container':
+    paths:
+      - packages/container/libraries/container/
   '@inversifyjs/core':
     paths:
       - packages/container/libraries/core/
