--- a/packages/container/libraries/container/package.json
+++ b/packages/container/libraries/container/package.json
@@ -29,6 +29,9 @@
     "tslib": "2.8.1",
     "typescript": "5.7.2"
   },
+  "peerDependencies": {
+    "reflect-metadata": "~0.2.2"
+  },
   "devEngines": {
     "node": "^20.18.0",
     "pnpm": "^9.12.1"
