fix: update turbo config with proper docs build config

--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,17 @@
       "inputs": ["src/**/*.{cts,mts,ts}"],
       "outputs": ["dist/**", "lib/**"]
     },
+    "@inversifyjs/inversify-docs-site#build": {
+      "dependsOn": ["^build"],
+      "inputs": [
+        "blog/**",
+        "docs/**",
+        "src/**/*.{cts,mts,ts}",
+        "docusaurus.config.ts",
+        "sidebars.ts"
+      ],
+      "outputs": ["build/**"]
+    },
     "format": {
       "inputs": ["src/**/*.{cts,mts,ts}"],
       "outputs": ["src/**/*.{cts,mts,ts}"]
