--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,8 @@ jobs:
         with:
           path: |
             ./packages/container/libraries/*
-            ./packages/docs/services/*"
+            ./packages/docs/services/*
+            ./packages/docs/tools/*
             ./packages/foundation/libraries/*
             ./packages/foundation/tools/*
           key: ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
