--- a/.github/workflows/collect-coverage.yaml
+++ b/.github/workflows/collect-coverage.yaml
@@ -51,7 +51,8 @@ jobs:
         with:
           path: |
             ./packages/container/libraries/*
-            ./packages/docs/services/*"
+            ./packages/docs/services/*
+            ./packages/docs/tools/*
             ./packages/foundation/libraries/*
             ./packages/foundation/tools/*
           key: ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
