--- a/packages/docs/services/inversify-site/package.json
+++ b/packages/docs/services/inversify-site/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@docusaurus/core": "3.6.3",
     "@docusaurus/preset-classic": "3.6.3",
+    "@inversifyjs/code-examples": "workspace:*",
     "@mdx-js/react": "3.1.0",
     "clsx": "2.1.1",
     "prism-react-renderer": "2.4.1",
