chore(inversify-code-examples): update example generator
Update script to parse and handle exclude from example comments

--- a/packages/docs/tools/inversify-code-examples/package.json
+++ b/packages/docs/tools/inversify-code-examples/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "build": "pnpm run build:cjs && pnpm run generate:examples",
     "build:cjs": "tsc --build tsconfig.cjs.json && pnpm exec foundation-ts-package-cjs ./lib/cjs",
-    "build:clean": "rimraf lib",
+    "build:clean": "rimraf generated lib",
     "format": "prettier --write ./src/**/*.ts",
     "generate:examples": "node ./lib/cjs/scripts/generateExamples.mjs",
     "lint": "eslint ./src",
