--- a/packages/docs/tools/inversify-code-examples/package.json
+++ b/packages/docs/tools/inversify-code-examples/package.json
@@ -40,6 +40,7 @@
   },
   "license": "MIT",
   "name": "@inversifyjs/code-examples",
+  "private": true,
   "publishConfig": {
     "access": "public"
   },
@@ -61,6 +62,5 @@
     "test:js:coverage": "pnpm run test:unit:js --coverage",
     "test:uncommitted": "pnpm run test --changedSince=HEAD",
     "test:unit:js": "pnpm run test:js --selectProjects Unit"
-  },
-  "version": "1.0.0"
+  }
 }
