--- a/packages/docs/services/inversify-site/package.json
+++ b/packages/docs/services/inversify-site/package.json
@@ -6,6 +6,7 @@
   "description": "InversifyJs docs site package",
   "dependencies": {
     "@docusaurus/core": "3.7.0",
+    "@docusaurus/faster": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@inversifyjs/code-examples": "workspace:*",
     "@mdx-js/react": "3.1.0",
