chore: remove ci build cache in favor of turbo one

--- a/.github/workflows/collect-coverage.yaml
+++ b/.github/workflows/collect-coverage.yaml
@@ -46,22 +46,8 @@ jobs:
         run: |
           echo "gitCommitHash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
-      - uses: actions/cache@v4
-        id: ts-build-cache
-        with:
-          path: |
-            ./packages/container/libraries/*
-            ./packages/docs/services/*
-            ./packages/docs/tools/*
-            ./packages/foundation/libraries/*
-            ./packages/foundation/tools/*
-          key: ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
-          restore-keys: |
-            ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
-
-      - name: Build on cache miss
+      - name: Build
         run: pnpm run build --filter ${{ matrix.package }}
-        if: ${{ !steps.ts-build-cache.outputs.cache-hit }}
 
       - name: Launch Unit Tests and generate coverage report
         run: pnpm run test:js:coverage --filter ${{ matrix.package }} --only
