--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,19 +40,6 @@ jobs:
         run: |
           echo "gitCommitHash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
-      - uses: actions/cache@v4
-        id: ts-build-cache
-        with:
-          path: |
-            ./packages/container/libraries/*
-            ./packages/docs/services/*
-            ./packages/docs/tools/*
-            ./packages/foundation/libraries/*
-            ./packages/foundation/tools/*
-          key: ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
-          restore-keys: |
-            ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
-
   test-package:
     name: Test package
     needs: build
@@ -75,21 +62,8 @@ jobs:
         run: |
           echo "gitCommitHash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
-      - uses: actions/cache@v4
-        id: ts-build-cache
-        with:
-          path: |
-            ./packages/container/libraries/*
-            ./packages/docs/*"
-            ./packages/foundation/libraries/*
-            ./packages/foundation/tools/*
-          key: ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
-          restore-keys: |
-            ts-build-${{ steps.get-git-commit-hash.outputs.gitCommitHash }}
-
-      - name: Build on cache miss
+      - name: Build
         run: pnpm run build --filter ${{ join(matrix.packages, ' --filter ') }}
-        if: ${{ !steps.ts-build-cache.outputs.cache-hit }}
 
       - name: Launch Unit Tests
         run: pnpm run test:unit:js --filter ${{ join(matrix.packages, ' --filter ') }} --only
