--- a/packages/foundation/tools/rollup-config/package.json
+++ b/packages/foundation/tools/rollup-config/package.json
@@ -4,13 +4,15 @@
     "url": "https://github.com/inversify/monorepo/issues"
   },
   "description": "Rollup config for monorepo packages",
-  "devDependencies": {
+  "dependencies": {
+    "@rollup/plugin-multi-entry": "6.0.1",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.2",
     "rollup-plugin-dts": "6.1.1",
-    "rollup": "4.29.2",
-    "prettier": "3.4.2",
-    "typescript": "5.7.2"
+    "rollup": "4.29.2"
+  },
+  "devDependencies": {
+    "prettier": "3.4.2"
   },
   "exports": "./lib/index.js",
   "homepage": "https://github.com/inversify/monorepo#readme",
