chore: update ci with test-e2e job

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,9 +71,29 @@ jobs:
       - name: Launch Integration Tests
         run: pnpm run test:integration:js --filter ${{ join(matrix.packages, ' --filter ') }} --only
 
+  test-e2e:
+    name: Run E2E tests.
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/setup
+
+      - name: Run e2e tests (CJS)
+        run: pnpm run test:e2e:cjs
+
+      - name: Run e2e tests (ESM)
+        run: pnpm run test:e2e:esm
+
   done:
     name: Done
     needs:
+      - test-e2e
       - test-package
     runs-on: ubuntu-latest
     steps:
