--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,14 +62,11 @@ jobs:
         run: |
           echo "gitCommitHash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Build
-        run: pnpm run build --filter ${{ join(matrix.packages, ' --filter ') }}
-
       - name: Launch Unit Tests
-        run: pnpm run test:unit:js --filter ${{ join(matrix.packages, ' --filter ') }} --only
+        run: pnpm run test:unit:js --filter ${{ join(matrix.packages, ' --filter ') }}
 
       - name: Launch Integration Tests
-        run: pnpm run test:integration:js --filter ${{ join(matrix.packages, ' --filter ') }} --only
+        run: pnpm run test:integration:js --filter ${{ join(matrix.packages, ' --filter ') }}
 
   test-e2e:
     name: Run E2E tests.
