chore(core): update npm ignore to ignore fixtures

--- a/packages/container/libraries/core/.npmignore
+++ b/packages/container/libraries/core/.npmignore
@@ -6,6 +6,7 @@
 **/*.spec.js.map
 **/*.ts
 !lib/cjs/**/*.d.ts
+lib/cjs/**/fixtures/**
 lib/esm/**/*.d.ts.map
 !lib/esm/index.d.ts
 !lib/esm/index.d.ts.map
