chore: clean dependencies
clean unused dependencies
clean unused exports

--- a/packages/foundation/tools/scripts/package.json
+++ b/packages/foundation/tools/scripts/package.json
@@ -2,6 +2,9 @@
   "name": "@inversifyjs/foundation-scripts",
   "private": true,
   "description": "Common scripts for monorepo packages",
+  "devDependencies": {
+    "prettier": "3.4.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/inversify/monorepo.git"
