--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
     "@commitlint/prompt-cli": "19.7.0",
-    "@inversifyjs/foundation-prettier-config": "workspace:*",
     "@inversifyjs/foundation-eslint-config": "workspace:*",
     "@inversifyjs/foundation-jest-config": "workspace:*",
+    "@inversifyjs/foundation-prettier-config": "workspace:*",
     "@inversifyjs/foundation-rollup-config": "workspace:*",
     "@inversifyjs/foundation-scripts": "workspace:*",
     "@inversifyjs/foundation-stryker-config": "workspace:*",
     "@inversifyjs/foundation-typescript-config": "workspace:*",
     "husky": "9.1.7",
+    "knip": "5.42.2",
     "lint-staged": "15.4.1",
     "turbo": "2.3.3"
   },
@@ -34,6 +35,7 @@
     "build": "turbo run build",
     "commit": "commit",
     "format": "turbo run format",
+    "knip": "knip",
     "lint": "turbo run lint",
     "prepare": "husky && turbo telemetry disable",
     "prerelease": "pnpm run build",
