chore: update build to rely on tslib

--- a/packages/foundation/tools/typescript-config/tsconfig.base.json
+++ b/packages/foundation/tools/typescript-config/tsconfig.base.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
     "lib": ["ES2022"],
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
