--- a/packages/docs/tools/inversify-code-examples/package.json
+++ b/packages/docs/tools/inversify-code-examples/package.json
@@ -18,6 +18,7 @@
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "ts-jest": "29.2.5",
+    "tslib": "2.8.1",
     "typescript": "5.7.3"
   },
   "homepage": "https://inversify.io",
