--- a/packages/container/libraries/strongly-typed/package.json
+++ b/packages/container/libraries/strongly-typed/package.json
@@ -10,6 +10,7 @@
     "eslint": "9.18.0",
     "jest": "29.7.0",
     "prettier": "3.4.2",
+    "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "rollup": "4.30.1",
     "ts-loader": "9.5.2",
