--- a/packages/docs/services/inversify-site/package.json
+++ b/packages/docs/services/inversify-site/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
     "@docusaurus/types": "3.7.0",
+    "@eslint/js": "9.18.0",
     "@types/react": "18.3.18",
     "eslint": "9.18.0",
     "eslint-plugin-prettier": "5.2.2",
