--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,6 +35,9 @@ jobs:
       - name: Lint affected source files
         run: pnpm run lint --filter=[origin/${{github.base_ref}}]
 
+      - name: Check for unused code
+        run: pnpm run unused --no-config-hints
+
       - name: Get current git commit hash
         id: get-git-commit-hash
         run: |
