chore: update turbo docs site build task with versioned inputs

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,9 @@
         "docs/**",
         "src/**/*.{cts,mts,ts}",
         "docusaurus.config.ts",
-        "sidebars.ts"
+        "sidebars.ts",
+        "versioned_docs/**",
+        "versioned_sidebars/**"
       ],
       "outputs": ["build/**"]
     },
