chore: update ci with benchmark comments

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,10 +38,38 @@ jobs:
       - name: Check for unused code
         run: pnpm run unused --no-config-hints
 
-      - name: Get current git commit hash
-        id: get-git-commit-hash
-        run: |
-          echo "gitCommitHash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+  run-benchmarks:
+    name: Run benchmarks
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/setup
+
+      - name: Run benchmarks (CommonJS)
+        id: run-cjs-benchmarks
+        run: echo "result=$(pnpm exec container-benchmarks-run-cjs)" >> $GITHUB_OUTPUT
+
+      - name: Run benchmarks (ESM)
+        id: run-esm-benchmarks
+        run: echo "result=$(pnpm exec container-benchmarks-run-esm)" >> $GITHUB_OUTPUT
+
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `${{steps.run-cjs-benchmarks.outputs.result}}
+            
+            ${{steps.run-esm-benchmarks.outputs.result}}`
+            })
 
   test-package:
     name: Test package
@@ -59,11 +87,6 @@ jobs:
           fetch-depth: 0
 
       - uses: ./.github/actions/setup
-
-      - name: Get current git commit hash
-        id: get-git-commit-hash
-        run: |
-          echo "gitCommitHash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: Launch Unit Tests
         run: pnpm run test:unit:js --filter ${{ join(matrix.packages, ' --filter ') }}
