chore: run container benchmarks only if container package is affected

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,10 +38,11 @@ jobs:
       - name: Check for unused code
         run: pnpm run unused --no-config-hints
 
-  run-benchmarks:
+  run-container-benchmarks:
     name: Run benchmarks
     needs: build
     runs-on: ubuntu-latest
+    if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/container') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
