--- a/.github/workflows/deploy-inversify-pages.yaml
+++ b/.github/workflows/deploy-inversify-pages.yaml
@@ -29,6 +29,6 @@ jobs:
         env:
           USE_SSH: true
         run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.email "inversify.github.io.deploy@github.com"
+          git config --global user.name "gh-actions"
           pnpm deploy:inversify:pages
