--- a/packages/docs/tools/inversify-code-examples/package.json
+++ b/packages/docs/tools/inversify-code-examples/package.json
@@ -9,6 +9,7 @@
     "inversify7": "npm:inversify@7.0.0-alpha.4"
   },
   "devDependencies": {
+    "@inversifyjs/code-examples-devkit": "workspace:*",
     "@jest/globals": "29.7.0",
     "@types/node": "22.13.1",
     "eslint": "9.20.0",
