chore: fix code examples build with dependency

--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,7 @@
       "outputs": ["build/**"]
     },
     "@inversifyjs/code-examples#build": {
+      "dependsOn": ["^build"],
       "inputs": ["src/**/*.{cts,mts,ts}"],
       "outputs": ["generated/**", "lib/**"]
     },
