chore: add inversify-binding-decorators-site package

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,19 @@
       "inputs": ["src/**/*.{cts,mts,ts}"],
       "outputs": ["generated/**", "lib/**"]
     },
+    "@inversifyjs/inversify-binding-decorators-docs-site#build": {
+      "dependsOn": ["^build"],
+      "inputs": [
+        "blog/**",
+        "docs/**",
+        "src/**/*.{cts,mts,ts}",
+        "docusaurus.config.ts",
+        "sidebars.ts",
+        "versioned_docs/**",
+        "versioned_sidebars/**"
+      ],
+      "outputs": ["build/**"]
+    },
     "@inversifyjs/inversify-docs-site#build": {
       "dependsOn": ["^build"],
       "inputs": [
