--- a/packages/container/tools/container-benchmarks/package.json
+++ b/packages/container/tools/container-benchmarks/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@inversifyjs/container": "workspace:*",
     "@inversifyjs/core": "workspace:*",
+    "@nestjs/common": "11.0.8",
+    "@nestjs/core": "11.0.8",
     "inversify6": "npm:inversify@6.2.2",
+    "rxjs": "7.8.1",
     "tinybench": "3.1.1",
     "tsyringe": "4.8.0"
   },
