chore: update gh benchmark job to rely on app token

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,9 +70,15 @@ jobs:
               echo "$(pnpm exec container-benchmarks-run-esm)" >> $GITHUB_OUTPUT
               echo "$EOF" >> $GITHUB_OUTPUT
 
+      - uses: actions/create-github-app-token@v1
+        id: create_token
+        with:
+          app-id: ${{ vars.GH_APP_ID }}
+          private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+
       - uses: actions/github-script@v7
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{ steps.create_token.outputs.token }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
