--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,6 +40,7 @@ jobs:
 
   run-container-benchmarks:
     name: Run benchmarks
+    environment: CI
     needs: build
     runs-on: ubuntu-latest
     if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/container') }}
