refactor(container-benchmarks): add abstract code to benchmark-utils

--- a/packages/container/tools/container-benchmarks/package.json
+++ b/packages/container/tools/container-benchmarks/package.json
@@ -9,6 +9,7 @@
     "container-benchmarks-run-esm": "./bin/run-esm.mjs"
   },
   "dependencies": {
+    "@inversifyjs/benchmark-utils": "workspace:*",
     "@inversifyjs/container": "workspace:*",
     "@inversifyjs/core": "workspace:*",
     "@nestjs/common": "11.0.9",
