chore(http-benchmarks): add http-benchmarks package. Add basic get scenarios

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,3 +5,4 @@ packages:
   - "packages/docs/tools/*"
   - "packages/foundation/libraries/*"
   - "packages/foundation/tools/*"
+  - "packages/http/libraries/*"
