--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@commitlint/config-conventional": "19.7.1",
     "@commitlint/prompt-cli": "19.7.1",
     "@inversifyjs/container-benchmarks": "workspace:*",
+    "@inversifyjs/http-benchmarks": "workspace:*",
     "@inversifyjs/foundation-eslint-config": "workspace:*",
     "@inversifyjs/foundation-jest-config": "workspace:*",
     "@inversifyjs/foundation-prettier-config": "workspace:*",
