--- a/packages/http/libraries/http-benchmarks/package.json
+++ b/packages/http/libraries/http-benchmarks/package.json
@@ -23,6 +23,13 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/node": "^22.13.4",
+    "eslint": "9.20.1",
+    "prettier": "3.5.1",
+    "rimraf": "6.0.1",
+    "rollup": "4.34.8",
+    "ts-loader": "9.5.2",
+    "tslib": "2.8.1",
     "typescript": "5.7.3"
   },
   "homepage": "https://inversify.io",
